--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
