--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "shortid": "^2.2.16",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-i18n": "^8.22.4",
