--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "shortid": "^2.2.16",
+    "v-checkbox": "0.0.1",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-i18n": "^8.22.4",
