--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-i18n": "^8.22.4",
+    "vue-pdf": "^4.2.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
