--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.10",
     "shortid": "^2.2.16",
     "v-checkbox": "0.0.1",
     "vee-validate": "^3.4.5",
