--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
+    "site": "reto-ponte-fit",
     "public": "dist",
     "ignore": [
       "firebase.json",
@@ -17,3 +18,4 @@
     ]
   }
 }
+
